--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ section{
   color: black;
   font-size: 1.1em;
   font-family: 'Quicksand', sans-serif;
-  width: 100wh;
+  width: 100vw;
   height: 100vh;
 }
 section:nth-child(1){
@@ -128,7 +128,7 @@ ul.onepage-pagination > li > a.active:before{
 .content-blog{
   color: white;
   text-align: center;
-  padding: 50px 150px 50px 150px;
+  padding: 30px 150px 30px 150px;
 }
 .content-contact{
     margin: 70px;
@@ -389,6 +389,32 @@ a.nav-link{
   opacity: 1;
 }
 
+.visit-me{
+  width: auto;
+  padding: 10px 50px !important;
+  background-color: orange;
+  border-radius: 25px;
+  color: white !important;
+  background: rgba(248,80,50,1);
+  background: -moz-linear-gradient(left, rgba(248,80,50,1) 0%, rgba(230,160,39,1) 100%);
+  background: -webkit-linear-gradient(left, rgba(248,80,50,1) 0%, rgba(230,160,39,1) 100%);
+  background: -o-linear-gradient(left, rgba(248,80,50,1) 0%, rgba(230,160,39,1) 100%);
+  background: -ms-linear-gradient(left, rgba(248,80,50,1) 0%, rgba(230,160,39,1) 100%);
+  background: linear-gradient(to right, rgba(248,80,50,1) 0%, rgba(230,160,39,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e6a027', GradientType=1 );
+}
+span.visit-me>a{
+  color: white !important;
+  cursor: pointer;
+}
+span.visit-me>a:hover{
+  color: white !important;
+  outline: none;
+  text-decoration: none;
+}
+.visi-misi{
+  font-size:1.2em;
+}
 /* =========RESPONSIVE========= */
 
 @media only screen and (max-width: 991px) {
@@ -420,5 +446,33 @@ a.nav-link{
   }
   .nick-event{
     font-size: 1.8em;
+  }
+  .content-blog{
+    font-size: 2em;
+    padding-top: 50px;
+  }
+  h1.title-blog{
+    font-size: 2.5em;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .visi-misi{
+    font-size: 0.2em !important;
+
+  }
+  h1.title-blog{
+    font-size: 0.3em !important;
+  }
+}
+@media only screen and (max-width: 640px) and (max-height: 360px) {
+  .content-blog{
+    padding: 0px;
+  }
+  .visi-misi{
+    font-size: 0.4em !important;
+    padding: 0px;
+  }
+  h1.title-blog{
+    font-size: 0.5em !important;
   }
 }
